feat: security 설정 변경